- New option: expanderstyle = 0 to draw arrows.
              expanderstyle = 1 to draw circles with plus and minus.
              expanderstyle = 2 to draw buttons with plus and minus.
- New option: gradient_colors = { "#ffffff", "#ffffff", "#ffffff", "#ffffff" }
              to set the colors used on the gradient of many widgets.
              gradient_colors = FALSE to disable.
- New option: prelight_shade = 1.0 to select the shade level used in the
              scrollbar's slider, GtkComboBox with comboboxstyle = 1 and
              in the prelight state with gradient_colors.
- New option: separatorstyle = 1 to draw smooth separators.              
- New option: shadow_shades = { 1.0, 1.0 } to draw a gradient on
              the shadow of some widgets.
- New option: spinbuttonstyle = 1 to add a separator on the GtkSpinButton.
- New option: textstyle = 1 for a shadow at the bottom of the text.
              textstyle = 2 for a shadow at the top of the text.
              textstyle = 3 for a shadow at the bottom right of the text.
              textstyle = 4 for a shadow at the top left of the text.
- New option: text_shade = 1.0 to specify the shade effect of the text's shadow.
- New option: trough_shades = { 1.0, 1.0 } to draw a gradient on
              the trough of GtkScrollbar and GtkProgressBar.
- Changed option: listviewstyle = 2 for a solid line.
- Changed option: reliefstyle = 3 for a gradient on shadow,
                  reliefstyle = 4 for a stronger shadow.
- Changed option: stepperstyle = 2 for squared steppers with a rounded slider.
- Deprecated option: gradients, please unset the other options instead.
- Deprecated option: profile, please manually adjust the other options.
- Deprecated option: scrollbar_color, please use a custom bg[SELECTED].
- Improved rendering: rounded GtkScale trough.
- Improved rendering: draw lightborder with on menubar (with menubarstyle = 1).