@@ -1567,14 +1567,44 @@ murrine_rgba_draw_scrollbar_slider (cairo_t *cr,
 	{
 		double bar_x = width/2-3.5;
 		int i;
-		for (i=0; i<3; i++)
-		{
-			cairo_move_to (cr, bar_x, 5);
-			cairo_line_to (cr, bar_x, height-5);
-			murrine_set_color_rgb (cr, &border);
-			cairo_stroke (cr);
 
-			bar_x += 3;
+		switch (scrollbar->handlestyle)
+		{
+			default:
+			case 0:
+			{
+				for (i=0; i<3; i++)
+				{
+					cairo_move_to (cr, bar_x, 5);
+					cairo_line_to (cr, bar_x, height-5);
+					murrine_set_color_rgb (cr, &border);
+					cairo_stroke (cr);
+
+					bar_x += 3;
+				}
+				break;
+			}
+			case 1:
+			{
+				MurrineRGB inset;				
+				murrine_shade (&fill, 1.08, &inset);
+
+				for (i=0; i<3; i++)
+				{
+					cairo_move_to (cr, bar_x, 5);
+					cairo_line_to (cr, bar_x, height-5);
+					murrine_set_color_rgb (cr, &border);
+					cairo_stroke (cr);
+
+					cairo_move_to (cr, bar_x+1, 5);
+					cairo_line_to (cr, bar_x+1, height-5);
+					murrine_set_color_rgb (cr, &inset);
+					cairo_stroke (cr);
+
+					bar_x += 3;
+				}
+				break;
+			}
 		}
 	}
 
@@ -1640,8 +1670,6 @@ murrine_rgba_draw_handle (cairo_t *cr,
                           const HandleParameters *handle,
                           int x, int y, int width, int height)
 {
-	const MurrineRGB *dark  = &colors->shade[5];
-
 	int bar_height;
 	int bar_width  = 4;
 	int i, bar_y = 1;
@@ -1662,14 +1690,40 @@ murrine_rgba_draw_handle (cairo_t *cr,
 		cairo_translate (cr, x+width/2-bar_width/2, y+height/2-bar_height/2+0.5);
 	}
 
-	for (i=0; i<num_bars; i++)
+	switch (handle->style)
 	{
-		murrine_set_color_rgb (cr, dark);
-		cairo_move_to (cr, 0, bar_y);
-		cairo_line_to (cr, bar_width, bar_y);
-		cairo_stroke (cr);
+		default:
+		case 0:
+		{
+			for (i=0; i<num_bars; i++)
+			{
+				cairo_move_to (cr, 0, bar_y);
+				cairo_line_to (cr, bar_width, bar_y);
+				murrine_set_color_rgb (cr, &colors->shade[5]);
+				cairo_stroke (cr);
 
-		bar_y += bar_spacing;
+				bar_y += bar_spacing;
+			}			
+			break;
+		}
+		case 1:
+		{	
+			for (i=0; i<num_bars; i++)
+			{
+				cairo_move_to (cr, 0, bar_y);
+				cairo_line_to (cr, bar_width, bar_y);
+				murrine_set_color_rgb (cr, &colors->shade[5]);
+				cairo_stroke (cr);
+
+				cairo_move_to (cr, 0, bar_y+1);
+				cairo_line_to (cr, bar_width, bar_y+1);
+				murrine_set_color_rgb (cr, &colors->shade[0]);
+				cairo_stroke (cr);
+
+				bar_y += bar_spacing;
+			}			
+			break;
+		}		
 	}
 }
 
