@@ -43,26 +43,27 @@ typedef enum
 	MRN_FLAG_GLAZESTYLE = 1 << 6,
 	MRN_FLAG_GLOW_SHADE = 1 << 7,
 	MRN_FLAG_GLOWSTYLE = 1 << 8,
-	MRN_FLAG_HIGHLIGHT_SHADE = 1 << 9,
-	MRN_FLAG_LIGHTBORDER_SHADE = 1 << 10,
-	MRN_FLAG_LIGHTBORDERSTYLE= 1 << 11,
-	MRN_FLAG_LISTVIEWHEADERSTYLE = 1 << 12,
-	MRN_FLAG_LISTVIEWSTYLE = 1 << 13,
-	MRN_FLAG_MENUBARITEMSTYLE = 1 << 14,
-	MRN_FLAG_MENUBARSTYLE = 1 << 15,
-	MRN_FLAG_MENUITEMSTYLE = 1 << 16,
-	MRN_FLAG_MENUSTYLE = 1 << 17,
-	MRN_FLAG_PRELIGHT_SHADE = 1 << 18,
-	MRN_FLAG_PROGRESSBARSTYLE = 1 << 19,
-	MRN_FLAG_RELIEFSTYLE = 1 << 20,
-	MRN_FLAG_SCROLLBARSTYLE = 1 << 21,
-	MRN_FLAG_SEPARATORSTYLE = 1 << 22,
-	MRN_FLAG_SLIDERSTYLE = 1 << 23,
-	MRN_FLAG_SPINBUTTONSTYLE = 1 << 24,
-	MRN_FLAG_STEPPERSTYLE = 1 << 25,
-	MRN_FLAG_TEXTSTYLE = 1 << 26,
-	MRN_FLAG_TEXT_SHADE = 1 << 27,
-	MRN_FLAG_TOOLBARSTYLE = 1 << 28
+	MRN_FLAG_HANDLESTYLE = 1 << 9,
+	MRN_FLAG_HIGHLIGHT_SHADE = 1 << 10,
+	MRN_FLAG_LIGHTBORDER_SHADE = 1 << 11,
+	MRN_FLAG_LIGHTBORDERSTYLE= 1 << 12,
+	MRN_FLAG_LISTVIEWHEADERSTYLE = 1 << 13,
+	MRN_FLAG_LISTVIEWSTYLE = 1 << 14,
+	MRN_FLAG_MENUBARITEMSTYLE = 1 << 15,
+	MRN_FLAG_MENUBARSTYLE = 1 << 16,
+	MRN_FLAG_MENUITEMSTYLE = 1 << 17,
+	MRN_FLAG_MENUSTYLE = 1 << 18,
+	MRN_FLAG_PRELIGHT_SHADE = 1 << 19,
+	MRN_FLAG_PROGRESSBARSTYLE = 1 << 20,
+	MRN_FLAG_RELIEFSTYLE = 1 << 21,
+	MRN_FLAG_SCROLLBARSTYLE = 1 << 22,
+	MRN_FLAG_SEPARATORSTYLE = 1 << 23,
+	MRN_FLAG_SLIDERSTYLE = 1 << 24,
+	MRN_FLAG_SPINBUTTONSTYLE = 1 << 25,
+	MRN_FLAG_STEPPERSTYLE = 1 << 26,
+	MRN_FLAG_TEXTSTYLE = 1 << 27,
+	MRN_FLAG_TEXT_SHADE = 1 << 28,
+	MRN_FLAG_TOOLBARSTYLE = 1 << 29
 } MurrineRcFlags;
 
 typedef enum
@@ -110,6 +111,7 @@ struct _MurrineRcStyle
 	guint8   expanderstyle;
 	guint8   glazestyle;
 	guint8   glowstyle;
+	guint8   handlestyle;
 	guint8   lightborderstyle;
 	guint8   listviewheaderstyle;
 	guint8   listviewstyle;
